--- a/themes/next/source/resume/index.html
+++ b/themes/next/source/resume/index.html
@@ -12,152 +12,159 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 <div style="overflow:hidden">
 	<div style="float:left;">
 		<h2>个人信息</h2>
-
 		<ul>
-		<li>张扬乐 / 男 / 1992</li>
-		<li>教育经历：本科 / 福建农林大学环境工程系 / 2009 - 2013</li>
-		<li>工作年限：3年</li>
-		<li>技术博客：<a href="http://lle.coding.me/" target="_blank">http://lle.coding.me/</a></li>
-		<li>期望职位：Java研发工程师</li>
-		<li>期望薪资：16k - 18k / 月</li>
+			<li>张扬乐 / 男 / 1992</li>
+			<li>教育经历：本科 / 福建农林大学环境工程系 / 2009 - 2013</li>
+			<li>工作年限：3年</li>
+			<li>技术博客：http://lle.coding.me</li>
+			<li>期望职位：Java研发工程师</li>
+			<li>期望薪资：20k / 月</li>
 		</ul>
-	</div>
+</div>
 	<img style="float:right;margin-top:70px" src="/img/photo/avatar.jpg" width="90" />
 </div>
-
 <h2>联系方式</h2>
-
 <ul>
-<li>手机号码：185-0086-6372</li>
-<li>电子邮件：znyalor@gmail.com</li>
+	<li>手机号码：185-0086-6372</li>
+	<li>电子邮件：znyalor@gmail.com</li>
 </ul>
-
-<hr />
-
+<hr/>
 <h2>工作经历</h2>
-
-<h3>星云梦科技有限公司 · 后端研发工程师 · 2016/02 - 2017/07</h3>
-
+<h3>链家·自如网 · 高级Java工程师 · 2017/06 - 至今</h3>
 <ul>
-<li>负责多个服务器业务系统的需求分析、设计、开发工作</li>
-<li>持续对线上系统进行性能优化及稳定性提升</li>
-<li>相关技术文档编写工作</li>
-<li>与第三方沟通对接应用内容开放接口</li>
-<li>主导服务端重构</li>
-<li>Code Review</li>
-<li>参与招聘面试</li>
+	<li>负责多个后台业务系统的需求分析、设计、开发工作</li>
+	<li>持续对线上系统进行性能优化及稳定性提升</li>
+	<li>多次迭代技术owner</li>
+	<li>负责旅居平台基础服务、搜索、爬虫等系统</li>
 </ul>
-
-<h3>永易信息科技有限公司 · 软件工程师 · 2014/07 - 2016/01</h3>
-
+<h3>星云梦科技 · 后端研发工程师 · 2016/02 - 2017/06</h3>
 <ul>
-<li>协助业务方梳理业务需求</li>
-<li>提供业务规划方案、架构设计方案，并根据方案展开研发工作</li>
-<li>负责相关技术文档编写工作</li>
-<li>解决系统中的关键问题和技术难题</li>
+	<li>负责多个后台业务系统的需求分析、设计、开发工作</li>
+	<li>持续对线上系统进行性能优化及稳定性提升</li>
+	<li>相关技术文档编写工作</li>
+	<li>主导服务端重构</li>
 </ul>
-
-<hr />
-
+<h3>永易信息 · 软件工程师 · 2014/07 - 2016/02</h3>
+<ul>
+	<li>协助业务方梳理业务需求</li>
+	<li>提供业务规划方案、架构设计方案，并根据方案展开研发工作</li>
+	<li>负责相关技术文档编写工作</li>
+	<li>解决系统中的关键问题和技术难题</li>
+</ul>
+<hr/>
 <h2>项目经历</h2>
-
-<h3><a href="http://www.xingyun.cn/" target="_blank">颜值App</a>服务端(http://www.xingyun.cn/)</h3>
-
-<h4>主力研发成员 · 2016/02 - 至今</h4>
-
-<p>架构：Spring、DropWizard、Hessian、Dubbox、Moquette、RabbitMQ、Struts、Mybatis、Solr</p>
-
+<h3>自如网 · 旅居平台中心(http://www.ziroom.com)</h3>
+<h4>技术owner&amp;主力研发成员 · 2017/06 - 至今</h4>
+<p>
+	架构：Dubbox、SpringMVC、SpringBoot、RabbitMQ、Mybatis、Solr、Elasticsearch、Redis、Webmagic
+</p>
 <ul>
-<li>搭建日志数据平台原型，提供运营数据参考</li>
-<li>处理后端逻辑开发工作，持续维护线上系统</li>
-<li>优化直播间广播机制，性能提高100%以上</li>
-<li>优化读写分离数据库与事务</li>
-<li>优化App推送通知机制</li>
-<li>用户、商家搜索</li>
-<li>与乐视、Wifi万能钥匙等第三方对接应用内容开放接口</li>
-<li>主导服务端重构，Dubbox分布式RPC服务搭建</li>
-<li>运营管理系统功能开发</li>
+	<li>旅居平台业务线多次技术owner</li>
+	<li>搭建民宿房东多平台日历同步系统、有效降低房客预订失败率80%以上</li>
+	<li>民宿、驿搜索的维护与优化、搜索规则可视化管理</li>
+	<li>实时用户搜索行为分析平台原型</li>
+	<li>重构zk、quartz管理系统</li>
+	<li>维护代理IP库、搭建分布式爬虫系统，高效抓取竞品数据</li>
+	<li>自如寓智能入住应用层，智能锁、智能水电精确结算等</li>
+	<li>内容安全校验服务原型，获Q4最佳项目奖</li>
 </ul>
-
-<p>为使运营有初步数据参考，提供访问量、用户ip与地理位置、时间、频次等多个维度数据参考，通过解析用户访问日志搭建日志数据平台原型</p>
-
-<p>使用RabbitMQ、数据缓存、定时调度等策略并与客户端沟通配合，优化直播间秒开、数据获取、用户点赞、mqtt广播机制，系统性能与稳定性显著提升</p>
-
-<p>通过分库分表、优化表结构、读写分离、持续优化查询等提升数据库性能</p>
-
-<p>为使系统间松耦合，进行服务端重构拆分，主导使用了dubbox对系统做服务化，大大提升生涯业务能力与服务架构的理解</p>
-
-<p>--</p>
-
-<h3>鼎天富商城</h3>
-
-<h3>企业级智能桌牌(安卓平板App)</h3>
-
-<h3>平潭市场监管综合服务平台</h3>
-
-<h3>环保局协同办公系统</h3>
-
-<h4>主要开发成员 · 2014/07 - 2016/01</h4>
-
-<p>架构：SpringMVC、LigerUI、Quartz、Echarts、LigerUI、Mybatis，安卓多层级结构树、fragment自适应布局、SQLite文件双缓存、SIP协议语音通话</p>
-
+<p>
+	多次技术owner较大提升了生涯项目管理的理解
+</p>
+<p>
+	通过日历数据交换协议同步房东日历，极大提高了房客的预订体验
+</p>
+<p>
+	持续维护Solr房源搜索服务，使用Elasticsearch、Kibana实现对用户搜索行为实时分析原型
+</p>
+<p>
+	基于Webmagic分布式爬虫系统，对竞品房源、房东、评价、日历等数据将来的挖掘分析提供采集基础
+</p>
+<p>
+	使用布隆过滤器提供内容安全校验基础服务，对多条业务线UGC的黄反、广告、竞品等多种维度的校验支持，达到O(logN)的检索效率
+</p>
+<h3>星云颜值(http://www.xingyun.cn)</h3>
+<h4>主力研发成员 · 2016/02 - 2017/06</h4>
+<p>
+	架构：Spring、DropWizard、Hessian、Dubbox、Moquette、RabbitMQ、Struts、Mybatis、Solr
+</p>
 <ul>
-<li>数据报表</li>
-<li>后台商品管理</li>
-<li>库存管理</li>
-<li>订单管理</li>
-<li>ERP系统</li>
-<li>溯源系统</li>
-<li>预警系统</li>
-<li>视频监控流存储管理模块</li>
-<li>流程预警</li>
-<li>收发文系统</li>
-<li>企业组织架构通讯录</li>
-<li>Sipdroid开源库搭建sip服务器语音通话</li>
-<li>云录音器</li>
+	<li>处理后端逻辑开发工作，持续维护线上系统</li>
+	<li>搭建日志数据平台原型</li>
+	<li>优化直播间广播机制，性能提高100%以上</li>
+	<li>优化App推送通知机制</li>
+	<li>用户、商家搜索</li>
+	<li>对乐视、Wifi万能钥匙等第三方开放应用内容接口</li>
+	<li>线上线下数十个活动技术支持</li>
+	<li>主导服务端重构，Dubbox分布式RPC服务搭建</li>
 </ul>
-
-<p>鼎天富商城、企业级智能桌牌(安卓平板App)为公司自营项目，本地较大的生鲜电商前列平台与企业级云办公服务</p>
-
-<p>平潭市场监管综合服务平台接入平潭综合实验区数百家企业，市场部门非常满意并后续追加业务</p>
-
-<p>环保局协同办公系统，政府机构非常满意并签订该系统安卓App的合同</p>
-
-<p>通过这几个项目大大提升生涯业务场景理解能力与初步熟悉了移动应用规范与技术。</p>
-
-<hr />
-
+<p>
+	访问量、用户ip与地理位置、时间、频次等多个维度日志数据平台原型
+</p>
+<p>
+	使用RabbitMQ、数据缓存、定时调度等策略，优化直播间秒开、数据获取、用户点赞、mqtt广播机制，直播间性能提升100%以上
+</p>
+<p>
+	通过分库、优化表结构、读写分离、持续优化查询等提升数据库性能
+</p>
+<p>
+	主导服务端重构拆分，使用dubbox对系统做服务化
+</p>
+<p>
+	--
+</p>
+<h3>鼎天富商城 / 企业级智能桌牌(安卓平板App) / 平潭市场监管综合服务平台 / 环保局协同办公系统</h3>
+<h4>主要开发成员 · 2014/07 - 2016/02</h4>
+<p>
+	架构：SpringMVC、LigerUI、Quartz、Echarts、LigerUI、Mybatis，安卓多层级结构树、fragment自适应布局、SQLite文件双缓存、SIP协议语音通话
+</p>
+<ul>
+	<li>数据报表</li>
+	<li>后台商品管理、库存管理、订单管理、视频监控流存储管理</li>
+	<li>ERP系统、溯源系统、预警系统、收发文系统</li>
+	<li>流程预警</li>
+	<li>企业组织架构通讯录</li>
+	<li>Sipdroid开源库搭建sip服务器语音通话</li>
+	<li>云录音器</li>
+</ul>
+<p>
+	通过这几个项目大大提升生涯业务场景理解能力与初步熟悉移动应用规范与技术。
+</p>
+<hr/>
 <h2>开源&amp;个人项目</h2>
-
-<h3><a href="https://github.com/zylele/dubbokeeper-mqs" target="_blank">dubbokeeper-mqs</a>(https://github.com/zylele/dubbokeeper-mqs)</h3>
-
-<p>dubbokeeper-mqs是一个使用MySQL持久化监控分析的Dubbo服务管理系统</p>
-
-<p>包含应用管理、动态配置、统计、监控、服务预警功能，集成监控与展示，节省服务器资源，一键编译部署。</p>
-
-<hr />
-
+<h3>参与硕士项目 · 互联网人才大数据系统</h3>
+<p>
+	主要参与数据采集、统计、检索
+</p>
+<h3>微信小程序 · 计日指期</h3>
+<p>
+	计日指期是一个计算起始日、倒数日、日期间隔的小程序。
+</p>
+<h3>dubbokeeper-mqs(https://github.com/zylele/dubbokeeper-mqs)</h3>
+<p>
+	MySQL持久化监控分析的Dubbo服务管理系统。
+</p>
+<hr/>
 <h2>技能清单</h2>
-
-<p>以下均为我熟练使用的技能，另使用过Python、C等其他编程语言</p>
-
+<p>
+	以下均为我熟练使用的技能，另使用过Python、C等其他编程语言
+</p>
 <ul>
-<li>Java EE：Spring、Struts、MyBatis、REST</li>
-<li>SOA&amp;微服务：Hessian、Dubbox</li>
-<li>搜索引擎：Solr、ElasticSearch</li>
-<li>消息中间件：Moquette、RabbitMQ</li>
-<li>SQL&amp;NoSQL：MySQL、Oracle、Memcached、Redis</li>
-<li>版本控制：Git、Subversion、Maven</li>
-<li>持续集成：Hudson、Jenkins、Travis CI</li>
-<li>Linux环境&amp;shell脚本</li>
-<li>常见设计模式&amp;数据结构</li>
-<li>前端技能：HTML、JSP、jQuery、JS、Bootstrap</li>
+	<li>Java EE：Spring、Struts、MyBatis、REST</li>
+	<li>SOA&amp;微服务：Hessian、Dubbox</li>
+	<li>搜索引擎：Solr、ElasticSearch</li>
+	<li>消息中间件：Moquette、RabbitMQ</li>
+	<li>SQL&amp;NoSQL：MySQL、Oracle、Memcached、Redis</li>
+	<li>版本控制：Git、Subversion、Maven</li>
+	<li>持续集成：Hudson、Jenkins、Travis CI</li>
+	<li>Linux环境&amp;shell脚本</li>
+	<li>常见设计模式&amp;数据结构</li>
+	<li>前端技能：HTML、JSP、jQuery、JS、Bootstrap、Thyemleaf</li>
 </ul>
+<hr/>
+<p>
+	感谢您花时间阅读我的简历，期待能有机会和您共事。
+</p>
 
-<hr />
-
-<p>感谢您花时间阅读我的简历，期待能有机会和您共事。</p>
-
-<!-- Use style in style1-->
 </body>
 </html>
