--- a/themes/next/source/resume/index.html
+++ b/themes/next/source/resume/index.html
@@ -78,7 +78,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	持续维护Solr房源搜索服务，使用Elasticsearch、Kibana实现对用户搜索行为实时分析原型
 </p>
 <p>
-	基于Webmagic分布式爬虫系统，对竞品房源、房东、评价、日历等数据将来的挖掘分析提供采集基础
+	搭建分布式爬虫系统，对竞品房源、房东、评价、日历等数据将来的挖掘分析提供采集基础
 </p>
 <p>
 	使用布隆过滤器提供内容安全校验基础服务，对多条业务线UGC的黄反、广告、竞品等多种维度的校验支持，达到O(logN)的检索效率
