--- a/themes/next/source/resume/index.html
+++ b/themes/next/source/resume/index.html
@@ -19,9 +19,10 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 			<li>技术博客：http://lle.coding.me</li>
 			<li>期望职位：Java研发工程师</li>
 			<li>期望薪资：20k / 月</li>
+			<li>高效业务、协作与技术驱动</li>
 		</ul>
 </div>
-	<img style="float:right;margin-top:70px" src="/img/photo/avatar.jpg" width="90" />
+	<img style="float:right;margin-top:70px" src="/img/photo/avatar.jpg" width="100" />
 </div>
 <h2>联系方式</h2>
 <ul>
@@ -123,7 +124,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 </p>
 <hr/>
 <h2>开源&amp;个人项目</h2>
-<h3>参与硕士项目 · 互联网人才大数据系统</h3>
+<h3>参与硕士项目 · 互联网人才Spark大数据系统</h3>
 <p>
 	主要参与数据采集、统计、检索
 </p>
@@ -137,9 +138,6 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 </p>
 <hr/>
 <h2>技能清单</h2>
-<p>
-	以下均为我熟练使用的技能，另使用过Python、C等其他编程语言
-</p>
 <ul>
 	<li>Java EE：Spring、Struts、MyBatis、REST</li>
 	<li>SOA&amp;微服务：Hessian、Dubbox</li>
