--- a/themes/next/source/resume/index.html
+++ b/themes/next/source/resume/index.html
@@ -55,7 +55,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 <hr/>
 <h2>项目经历</h2>
 <h3>自如网 · 旅居平台中心(http://www.ziroom.com)</h3>
-<h4>技术owner&amp;主力研发成员 · 2017/06 - 至今</h4>
+<h4>技术owner&amp;主力研发成员 · 2017/07 - 至今</h4>
 <ul>
 	<li>旅居平台业务线多次技术owner</li>
 	<li>搭建民宿房东多平台日历同步系统、有效降低房客预订失败率80%以上</li>
@@ -94,7 +94,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	<li>主导服务端重构，Dubbox分布式RPC服务搭建</li>
 </ul>
 <p>
-	访问量、用户ip与地理位置、时间、频次等多个维度日志数据平台原型
+	用户访问、ip与地理位置、时间、频次等多个行为维度数据平台原型
 </p>
 <p>
 	使用RabbitMQ、数据缓存、定时调度等策略，优化直播间秒开、数据获取、用户点赞、mqtt广播机制，直播间性能提升100%以上
