--- a/themes/next/source/resume/index.html
+++ b/themes/next/source/resume/index.html
@@ -18,7 +18,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 			<li>工作年限：3年</li>
 			<li>技术博客：http://lle.coding.me</li>
 			<li>期望职位：Java研发工程师</li>
-			<li>期望薪资：20k / 月</li>
+			<li>期望薪资：20k ~ 22k / 月</li>
 			<li>高效业务、协作与技术驱动</li>
 		</ul>
 </div>
@@ -55,22 +55,22 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 <hr/>
 <h2>项目经历</h2>
 <h3>自如网 · 旅居平台中心(http://www.ziroom.com)</h3>
-<h4>技术owner&amp;主力研发成员 · 2017/07 - 至今</h4>
+<h4>技术owner&amp;主力研发成员 · 2017/06 - 至今</h4>
 <ul>
-	<li>旅居平台业务线多次技术owner</li>
+	<li>旅居平台业务线多次迭代技术owner</li>
 	<li>搭建民宿房东多平台日历同步系统、有效降低房客预订失败率80%以上</li>
 	<li>民宿、驿搜索的维护与优化、搜索规则可视化管理</li>
 	<li>实时用户搜索行为分析平台原型</li>
 	<li>重构zk、quartz管理系统</li>
 	<li>维护代理IP库、搭建分布式爬虫系统，高效抓取竞品数据</li>
-	<li>自如寓智能入住应用层，智能锁、智能水电精确结算等</li>
+	<li>自如寓智能入住应用层，接入智能锁、智能水电精确结算等智能家居</li>
 	<li>内容安全校验服务原型，获Q4最佳项目奖</li>
 </ul>
 <p>
-	多次技术owner较大提升了生涯项目管理的理解
+	多次技术owner的经历大大提升了生涯对于项目管理的理解
 </p>
 <p>
-	通过日历数据交换协议同步房东日历，极大提高了房客的预订体验
+	基于icalendar日历数据交换标准协议同步房东日历，极大提高了房客的预订体验与降低房东沟通成本
 </p>
 <p>
 	持续维护Solr房源搜索服务，使用Elasticsearch、Kibana实现对用户搜索行为实时分析原型
@@ -79,7 +79,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	搭建分布式爬虫系统，对竞品房源、房东、评价、日历等数据将来的挖掘分析提供采集基础
 </p>
 <p>
-	使用布隆过滤器提供内容安全校验基础服务，对多条业务线UGC的黄反、广告、竞品等多种维度的校验支持，达到O(logN)的检索效率
+	基于ik分词与构建内存字典树提供内容安全校验基础服务，对多条业务线UGC的黄反、广告、竞品等多种维度的校验支持，达到O(logN)的检索效率
 </p>
 <h3>星云颜值(http://www.xingyun.cn)</h3>
 <h4>主力研发成员 · 2016/02 - 2017/06</h4>
@@ -111,13 +111,10 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 <h3>鼎天富商城 / 企业级智能桌牌(安卓平板App) / 平潭市场监管综合服务平台 / 环保局协同办公系统</h3>
 <h4>主要开发成员 · 2014/07 - 2016/02</h4>
 <ul>
-	<li>数据报表</li>
 	<li>后台商品管理、库存管理、订单管理、视频监控流存储管理</li>
 	<li>ERP系统、溯源系统、预警系统、收发文系统</li>
-	<li>流程预警</li>
-	<li>企业组织架构通讯录</li>
+	<li>企业组织架构通讯录、云录音器</li>
 	<li>Sipdroid开源库搭建sip服务器语音通话</li>
-	<li>云录音器</li>
 </ul>
 <p>
 	通过这几个项目大大提升生涯业务场景理解能力与初步熟悉移动应用规范与技术。
@@ -130,11 +127,11 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 </p>
 <h3>微信小程序 · 计日指期</h3>
 <p>
-	计日指期是一个计算起始日、倒数日、日期间隔的小程序。
+	计日指期是一个各种日期计算的小程序。
 </p>
 <h3>dubbokeeper-mqs(https://github.com/zylele/dubbokeeper-mqs)</h3>
 <p>
-	MySQL持久化监控分析的Dubbo服务管理系统。
+	基于MySQL持久化的Dubbo服务监控分析管理系统。
 </p>
 <hr/>
 <h2>技能清单</h2>
