--- a/themes/next/source/resume/index.html
+++ b/themes/next/source/resume/index.html
@@ -15,99 +15,78 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 		<ul>
 			<li>张扬乐 / 男 / 1992</li>
 			<li>教育经历：本科 / 福建农林大学环境工程系 / 2009 - 2013</li>
-			<li>工作年限：3年</li>
 			<li>技术博客：http://lle.coding.me</li>
 			<li>期望职位：Java研发工程师</li>
 			<li>期望薪资：20k ~ 22k / 月</li>
-			<li>高效业务、协作与技术驱动</li>
+			<li>手机号码：185-0086-6372</li>
+			<li>电子邮件：znyalor@gmail.com</li>
 		</ul>
-</div>
+	</div>
 	<img style="float:right;margin-top:70px" src="/img/photo/avatar.jpg" width="100" />
 </div>
-<h2>联系方式</h2>
-<ul>
-	<li>手机号码：185-0086-6372</li>
-	<li>电子邮件：znyalor@gmail.com</li>
-</ul>
 <hr/>
 <h2>工作经历</h2>
 <h3>链家·自如网 · 高级Java工程师 · 2017/06 - 至今</h3>
 <ul>
-	<li>负责多个后台业务系统的需求分析、设计、开发工作</li>
-	<li>持续对线上系统进行性能优化及稳定性提升</li>
 	<li>多次迭代技术owner</li>
-	<li>负责旅居平台基础服务、搜索、爬虫等系统</li>
+	<li>负责旅居业务服务、搜索、爬虫、自如寓智能平台等系统</li>
+	<li>进行Code Review，管理指导初级研发人员，参与招聘面试</li>
 </ul>
 <h3>星云梦科技 · 后端研发工程师 · 2016/02 - 2017/06</h3>
 <ul>
 	<li>负责多个后台业务系统的需求分析、设计、开发工作</li>
 	<li>持续对线上系统进行性能优化及稳定性提升</li>
-	<li>相关技术文档编写工作</li>
-	<li>主导服务端重构</li>
+	<li>主导服务端重构拆分</li>
 </ul>
 <h3>永易信息 · 软件工程师 · 2014/07 - 2016/02</h3>
 <ul>
-	<li>协助业务方梳理业务需求</li>
-	<li>提供业务规划方案、架构设计方案，并根据方案展开研发工作</li>
-	<li>负责相关技术文档编写工作</li>
+	<li>协助业务方梳理业务需求，并根据需求方案展开研发工作</li>
+	<li>负责相关技术文档编写</li>
 	<li>解决系统中的关键问题和技术难题</li>
 </ul>
 <hr/>
 <h2>项目经历</h2>
-<h3>自如网 · 旅居平台中心(http://www.ziroom.com)</h3>
+<h3>自如寓智能公寓系统</h3>
+<h4>技术owner · 2017/12 - 至今</h4>
+<ul>
+	<li>签约、物业交割流程、新后台系统的前后端分离重构，目标是实现新一代智能公寓管理系统的开放产品</li>
+	<li>负责自如寓物联智能化，接入智能锁、智能水电表、各种智能家居等</li>
+	<li>解决关联智能锁、智能水电等各种场景自动化智能入住</li>
+	<li>复杂租住场景下的水电费用核心算法设计与实现</li>
+</ul>
+<h3>分布式爬虫系统</h3>
+<h4>主力研发成员 · 2017/08 - 至今</h4>
+<ul>
+	<li>基于WebMagic二次开发搭建，对多个竞品数据进行抓取</li>
+	<li>实现seed队列监测、动态抓取配置管理、分布式调度、worker横向扩展</li>
+	<li>基于房源属性做自动探测，高效抓取与落地到库</li>
+	<li>对房源、房东、评价、日历等数据清洗，为将来的挖掘分析提供采集基础</li>
+	<li>爬取并维护代理IP库，实时告警、交叉检测，保证可用IP数在100个以上</li>
+	<li>基于icalendar日历数据交换标准协议同步房东日历，有效降低房东沟通成本，降低房客预订失败率80%以上，极大提高了房客的预订体验与降低房东沟通成本</li>
+</ul>
+<h3>旅居平台服务系统</h3>
 <h4>技术owner&amp;主力研发成员 · 2017/06 - 至今</h4>
 <ul>
-	<li>旅居平台业务线多次迭代技术owner</li>
-	<li>搭建民宿房东多平台日历同步系统、有效降低房客预订失败率80%以上</li>
-	<li>民宿、驿搜索的维护与优化、搜索规则可视化管理</li>
-	<li>实时用户搜索行为分析平台原型</li>
-	<li>重构zk、quartz管理系统</li>
-	<li>维护代理IP库、搭建分布式爬虫系统，高效抓取竞品数据</li>
-	<li>自如寓智能入住应用层，接入智能锁、智能水电精确结算等智能家居</li>
-	<li>内容安全校验服务原型，获Q4最佳项目奖</li>
+	<li>负责旅居业务的民宿房源、攻略搜索的持续维护与优化</li>
+	<li>搜索管理，对搜索评分、房源权重、排序规则等做可视化</li>
+	<li>基于Elasticsearch、Kibana实现对用户搜索行为实时分析</li>
+	<li>地理信息通用结构组件、租住场景共享基础服务</li>
+	<li>重构zk、quartz管理系统，参与阿修罗dubbo服务监控系统开发</li>
+	<li>基于ik分词与构建内存字典树提供内容安全校验基础服务，对全网业务线UGC的黄反、广告、竞品等多种维度的校验支持，达到O(logN)的检索效率，Q4最佳项目奖</li>
 </ul>
-<p>
-	多次技术owner的经历大大提升了生涯对于项目管理的理解
-</p>
-<p>
-	基于icalendar日历数据交换标准协议同步房东日历，极大提高了房客的预订体验与降低房东沟通成本
-</p>
-<p>
-	持续维护Solr房源搜索服务，使用Elasticsearch、Kibana实现对用户搜索行为实时分析原型
-</p>
-<p>
-	搭建分布式爬虫系统，对竞品房源、房东、评价、日历等数据将来的挖掘分析提供采集基础
-</p>
-<p>
-	基于ik分词与构建内存字典树提供内容安全校验基础服务，对多条业务线UGC的黄反、广告、竞品等多种维度的校验支持，达到O(logN)的检索效率
-</p>
 <h3>星云颜值(http://www.xingyun.cn)</h3>
 <h4>主力研发成员 · 2016/02 - 2017/06</h4>
 <ul>
 	<li>处理后端逻辑开发工作，持续维护线上系统</li>
-	<li>搭建日志数据平台原型</li>
-	<li>优化直播间广播机制，性能提高100%以上</li>
+	<li>搭建用户访问、ip与地理位置、时间、频次等多个行为维度数据平台原型</li>
+	<li>使用RabbitMQ、数据缓存、定时调度等策略，优化直播间秒开、数据获取、用户点赞、mqtt广播机制，直播间性能提升100%以上</li>
+	<li>通过分库、优化表结构、读写分离、持续优化查询等提升数据库性能</li>
 	<li>优化App推送通知机制</li>
-	<li>用户、商家搜索</li>
+	<li>负责用户、商家搜索功能</li>
 	<li>对乐视、Wifi万能钥匙等第三方开放应用内容接口</li>
 	<li>线上线下数十个活动技术支持</li>
-	<li>主导服务端重构，Dubbox分布式RPC服务搭建</li>
+	<li>主导服务端重构拆分，使用dubbox对系统做服务化</li>
 </ul>
-<p>
-	用户访问、ip与地理位置、时间、频次等多个行为维度数据平台原型
-</p>
-<p>
-	使用RabbitMQ、数据缓存、定时调度等策略，优化直播间秒开、数据获取、用户点赞、mqtt广播机制，直播间性能提升100%以上
-</p>
-<p>
-	通过分库、优化表结构、读写分离、持续优化查询等提升数据库性能
-</p>
-<p>
-	主导服务端重构拆分，使用dubbox对系统做服务化
-</p>
-<p>
-	--
-</p>
 <h3>鼎天富商城 / 企业级智能桌牌(安卓平板App) / 平潭市场监管综合服务平台 / 环保局协同办公系统</h3>
 <h4>主要开发成员 · 2014/07 - 2016/02</h4>
 <ul>
@@ -121,13 +100,13 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 </p>
 <hr/>
 <h2>开源&amp;个人项目</h2>
-<h3>参与硕士项目 · 互联网人才Spark大数据系统</h3>
+<h3>硕士项目 · 互联网人才Spark大数据系统</h3>
 <p>
-	主要参与数据采集、统计、检索
+	参与数据采集、统计、检索。
 </p>
 <h3>微信小程序 · 计日指期</h3>
 <p>
-	计日指期是一个各种日期计算的小程序。
+	计日指期是一个提供各种日期计算的小程序工具。
 </p>
 <h3>dubbokeeper-mqs(https://github.com/zylele/dubbokeeper-mqs)</h3>
 <p>
