--- a/themes/next/source/resume/index.html
+++ b/themes/next/source/resume/index.html
@@ -15,14 +15,14 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 		<ul>
 			<li>张扬乐 / 男 / 1992</li>
 			<li>教育经历：本科 / 福建农林大学环境工程系 / 2009 - 2013</li>
-			<li>技术博客：http://lle.coding.me</li>
+			<li>技术博客：https://zylele.github.io</li>
 			<li>期望职位：Java研发工程师</li>
-			<li>期望薪资：20k ~ 22k / 月</li>
+			<li>期望薪资：25k ~ 27k / 月</li>
 			<li>手机号码：185-0086-6372</li>
 			<li>电子邮件：znyalor@gmail.com</li>
 		</ul>
 	</div>
-	<img style="float:right;margin-top:70px" src="/img/photo/avatar.jpg" width="130" />
+	<img style="float:right;margin-top:70px" src="/img/resume/avatar.jpg" width="130" />
 </div>
 <hr/>
 <h2>工作经历</h2>
